--- a/config/_default/menus.es.toml
+++ b/config/_default/menus.es.toml
@@ -4,29 +4,34 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Sobre mí"
-  url = "about/"
-  weight = 10
-
-[[main]]
-  name = "Posts"
+  name = "Blog"
   url = "post/"
-  weight = 20
+  weight = 10
 
 [[main]]
   name = "Proyectos"
   url = "#projects"
-  weight = 30
+  weight = 20
 
 [[main]]
   name = "Destacado"
   url = "#featured"
-  weight = 40
+  weight = 30
 
 [[main]]
   name = "Cursos"
   url = "courses/"
+  weight = 40
+
+[[main]]
+  name = "Eventos"
+  url = "talk/"
   weight = 50
+
+[[main]]
+  name = "Sobre mí"
+  url = "about/"
+  weight = 60
 
 
 # Link to a PDF of your resume/CV from the menu.
