--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,30 +4,34 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "About"
-  url = "about/"
-  weight = 10
-
-[[main]]
-  name = "Posts"
+  name = "Blog"
   url = "post/"
-  weight = 20
+  weight = 10
 
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
+  weight = 20
 
 [[main]]
   name = "Featured"
   url = "#featured"
-  weight = 40
+  weight = 30
 
 [[main]]
   name = "Courses"
   url = "courses/"
+  weight = 40
+
+[[main]]
+  name = "Events"
+  url = "talk/"
   weight = 50
 
+[[main]]
+  name = "About"
+  url = "about/"
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
