--- a/config/_default/menus.es.toml
+++ b/config/_default/menus.es.toml
@@ -9,13 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Proyectos"
-  url = "#projects"
-  weight = 20
-
-[[main]]
-  name = "Destacado"
-  url = "#featured"
+  name = "Documentos"
+  url = "publication/"
   weight = 30
 
 [[main]]
