--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,13 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 20
-
-[[main]]
-  name = "Featured"
-  url = "#featured"
+  name = "Documents"
+  url = "publication/"
   weight = 30
 
 [[main]]
