--- a/config/_default/menus.es.toml
+++ b/config/_default/menus.es.toml
@@ -14,14 +14,9 @@
   weight = 30
 
 [[main]]
-  name = "Cursos"
+  name = "Libros"
   url = "courses/"
   weight = 40
-
-[[main]]
-  name = "Eventos"
-  url = "talk/"
-  weight = 50
 
 [[main]]
   name = "Sobre mí"
